--- a/config/archives_space_config.yml
+++ b/config/archives_space_config.yml
@@ -4,26 +4,39 @@
 # your installation.
 #
 # search_url: The URL for performing the search
+# loaded_link: URL to the 'native' interface
+# object_types: aspace object types to return. these are mapped to Solr types:
+# field queries
+# query_params: params to be passed to Solr
+# native_query_params: params to be passed to the loaded_link.
 
 defaults: &defaults
-  search_url: 'http://localhost:8081/search'
-  # The CSS to use to select from results page. Limit the # of result with :nth-of-type 
-  row_selector: '.search-results .recordrow:nth-of-type(-n+3)' 
-  # in each row, how we find the link
-  link_selector: 'h3 a'
-  # in each row, how we find the description text
-  description_selector: '.recordsummary > div:not(.result_context)'
-  # Tags we want to clear out from the description 
-  sanitize_tags:
-    - span
-  # Query params should be listed in "hash" format
+  search_url: 'http://localhost:8090/collection1/select'
+  loaded_link: 'http://localhost:8081/search'
+  no_results_link: 'http://localhost:8081' 
+  object_types:
+    - subject
+    - classification
+    - accession
+    - repository
+    - resource
+    - agent
+    - digital_object
+    - archival_object
   query_params:
-    op:
-      - AND
-    field: []
-    from_year: [] 
-    to_year: []
-    q: ''
+    q:
+      - 'publish:true'
+      - 'types:pui' 
+    fq:
+      - '-exclude_by_default:true'
+      - 'publish:true'
+      - 'suppressed:false'
+    rows: 3
+    wt: 'json'
+  native_query_params:
+    op: ['']
+    q: []
+    
 
 development:
   <<: *defaults
